--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,22 @@ header ul  .active {
     
 
 }
+ .hero{
+  margin: 20px 10px;
+}
+
+.hero h4{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    
+}
+
+.hero h4 span{
+    color:orangered;
+    font-size: larger;
+    
+}
+
+
 
 
 
