--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,64 @@ header ul  .active {
     
 }
 
+/* form design */
+
+.newsletter{
+    margin: 50px;
+    padding: 50px;
+    border-radius: 10px;
+    background-color: aliceblue;
+    width: 40%;
+}
+
+form{
+ background-color:rgba(181, 90, 57, 0.521);
+ border-radius:10px ;
+ padding: 10px;
+ text-align:justify;
+ justify-content:center;
+ align-items: center;
+ width: 100%;
+ 
+  
+}
+
+form .input-control{
+    display: flex;
+    flex-direction: column;
+    margin: 20px 0;
+}
+
+form .input-control label{
+    text-transform: capitalize;
+    margin: 5px 0;
+}
+
+form .input-control input{
+    height: 35px;
+    border-radius: 10px;
+    width: 80%;
+    padding: 10px;
+}
+
+form .button button{
+    height:35px;
+    width: 100px;
+    border-radius: 10px;
+}
+
+form .button button:hover{
+    background-color: rgb(215, 166, 148);
+    color: rgb(226, 224, 224);
+}
+
+form .input-control input, form .button button{
+    border: none;
+}
+/* form design ends */
+
+
+
 
 
 
