--- a/css/querry.css
+++ b/css/querry.css
@@ -120,6 +120,12 @@ form{
         text-align: center;
         justify-content: space-around;
         align-items: center;
+        background-color: rgb(236, 246, 254);
+        border-radius: 0 0 20px 20px;
+        margin-top: -8px;
+        position: sticky;
+        z-index: 999;
+
         
     }
 
@@ -155,11 +161,20 @@ form{
     
     
     header ul li  .active{
-       
         padding:10px;
         border-radius:10px ;
         
     
+    }
+
+
+
+    .hero h4{
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        padding:auto ;
+        text-align: center;
+        
+        
     }
 
 
@@ -206,6 +221,10 @@ form .button {
 /* form design ends */
 
 
+.video-sermon video{
+   width: 100%;
+    
+}
 
     
     
